--- a/src/main/resources/templates/sites/panel.html
+++ b/src/main/resources/templates/sites/panel.html
@@ -1,28 +1,95 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title th:text="#{application.name}">Title</title>
+    <title th:text="#{application.name}"></title>
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap4.css">
     <link type="text/css" rel="stylesheet" href="/css/panel.css">
     <script src="/js/jquery.js"></script>
-    <script src="/js/panel.js"></script>
+    <script src="/js/iro.js"></script>
+    <script src="/js/bootstrap4.css"></script>
+    <script src="/js/api.js"></script>
 </head>
+
 <body>
-    <h1 th:text="#{application.name}"></h1>
-    <h2>WebPanel</h2>
+    <div class="row">
 
-    <div class="group-control">
-        <form>
-            <div for="red">Red</div>
-            <input id="red" type="range" class="slider" max="255" value="0" onchange="updateEvent()">
-            <div for="green">Green</div>
-            <input id="green" type="range" class="slider" max="255" value="0" onchange="updateEvent()">
-            <div for="blue">Blue</div>
-            <input id="blue" type="range" class="slider" max="255" value="0" onchange="updateEvent()">
-            <div for="speed">Interval</div>
-            <input id="speed" type="range" class="slider" min="1" value="0" max="1200" onchange="updateEvent()">
-        </form>
+        <div class="offset-1
+                    col-10
+                    container
+                    pane-main
+                    mt-4">
+
+            <div class="row
+                        p-3">
+
+                <div id="grouplist"
+                     class="container
+                            list-vertical
+                            col-2
+                            m-3">
+                    grouplist
+                </div>
+
+                <div class="container
+                            col-7
+                            m-3">
+
+                    <h1>LOGO</h1>
+                    <h2>Groupname</h2>
+
+                    <div id="options"
+                         class="row
+                                container
+                                pane-options
+                                mb-1
+                                p-3
+                                pr-0">
+
+                        <div class="col-6" id="color-picker-container"></div>
+
+                        <div class="col-6">
+                            <div class="container
+                                        pane-duration
+                                        mb-1">
+                                duration
+                            </div>
+
+                            <div class="container
+                                        pane-mode">
+                                mode
+                            </div>
+                        </div>
+                        options
+                    </div>
+
+                    <div id="colorlist"
+                         class="container
+                                list-horizontal
+                                mb-2">
+                        colorlist
+                    </div>
+
+                    <div class="container
+                                button-ok">
+                        apply
+                    </div>
+
+                </div>
+
+                <div class="container
+                            list-vertical
+                            col-2
+                            m-3"
+                     id="modulelist">
+
+                    modulelist
+                </div>
+            </div>
+        </div>
+
     </div>
-
 </body>
+<script src="/js/gui.js"></script>
 </html>
