--- a/src/main/resources/templates/sites/panel.html
+++ b/src/main/resources/templates/sites/panel.html
@@ -6,90 +6,41 @@
     <title th:text="#{application.name}"></title>
     <link type="text/css" rel="stylesheet" href="/css/bootstrap4.css">
     <link type="text/css" rel="stylesheet" href="/css/panel.css">
+    <link type="text/css" rel="stylesheet" href="/css/ionicons.css">
     <script src="/js/jquery.js"></script>
     <script src="/js/iro.js"></script>
-    <script src="/js/bootstrap4.css"></script>
+    <script src="/js/bootstrap4.js"></script>
     <script src="/js/api.js"></script>
 </head>
 
 <body>
     <div class="row">
-
         <div class="offset-1
                     col-10
                     container
                     pane-main
                     mt-4">
-
             <div class="row
                         p-3">
-
-                <div id="grouplist"
-                     class="container
-                            list-vertical
-                            col-2
-                            m-3">
-                    grouplist
-                </div>
-
+                <div th:replace="~{fragments/grouplist.html :: grouplist}"></div>
                 <div class="container
                             col-7
                             m-3">
-
                     <h1>LOGO</h1>
                     <h2>Groupname</h2>
-
-                    <div id="options"
-                         class="row
-                                container
-                                pane-options
-                                mb-1
-                                p-3
-                                pr-0">
-
-                        <div class="col-6" id="color-picker-container"></div>
-
-                        <div class="col-6">
-                            <div class="container
-                                        pane-duration
-                                        mb-1">
-                                duration
-                            </div>
-
-                            <div class="container
-                                        pane-mode">
-                                mode
-                            </div>
-                        </div>
-                        options
-                    </div>
-
-                    <div id="colorlist"
-                         class="container
-                                list-horizontal
-                                mb-2">
-                        colorlist
-                    </div>
-
+                    <div th:replace="~{fragments/options.html :: options}"></div>
+                    <div th:replace="~{fragments/colorlist.html :: colorlist}"></div>
                     <div class="container
                                 button-ok">
-                        apply
+                        <img src="/img/accept.svg">
                     </div>
-
                 </div>
-
-                <div class="container
-                            list-vertical
-                            col-2
-                            m-3"
-                     id="modulelist">
-
-                    modulelist
-                </div>
+                <div th:replace="~{fragments/modulelist.html :: modulelist}"></div>
             </div>
         </div>
 
     </div>
 </body>
+<script src="/js/logic.js"></script>
 <script src="/js/gui.js"></script>
 </html>
