Fixed bug in duration pane. Created JS functions to interact with the Servers API.

--- a/src/main/resources/templates/fragments/durationpane.html
+++ b/src/main/resources/templates/fragments/durationpane.html
@@ -61,7 +61,8 @@
                        min="0"
                        max="60"
                        step="1"
-                       value="0"/>
+                       value="0"
+                       onchange="fetchValues()"/>
             </div>
             <div class="col-1
                         box"
@@ -90,7 +91,8 @@
                        min="0"
                        max="24"
                        step="1"
-                       value="0"/>
+                       value="0"
+                       onchange="fetchValues()"/>
             </div>
             <div class="col-1
                         box"
@@ -119,7 +121,8 @@
                        min="0"
                        max="356"
                        step="1"
-                       value="0"/>
+                       value="0"
+                       onchange="fetchValues()"/>
             </div>
             <div class="col-1
                         box"
