--- a/src/main/resources/templates/sites/panel.html
+++ b/src/main/resources/templates/sites/panel.html
@@ -9,7 +9,6 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/iro.js"></script>
     <script src="/js/bootstrap4.js"></script>
-    <script src="/js/api.js"></script>
     <link type="text/css" rel="stylesheet" href="/css/panel.css">
 </head>
 
@@ -31,7 +30,8 @@
                     <div th:replace="~{fragments/options.html :: options}"></div>
                     <div th:replace="~{fragments/colorlist.html :: colorlist}"></div>
                     <div class="container
-                                button-ok">
+                                button-ok"
+                         onclick="executeCommand()">
                         <img src="/img/accept.svg">
                     </div>
                 </div>
@@ -41,6 +41,7 @@
 
     </div>
 </body>
+<script src="/js/api.js"></script>
 <script src="/js/logic.js"></script>
 <script src="/js/gui.js"></script>
 </html>
