--- a/src/main/resources/templates/fragments/colorlist.html
+++ b/src/main/resources/templates/fragments/colorlist.html
@@ -7,7 +7,7 @@
     <div th:fragment="colorlist">
         <div id="colorlist"
              class="container
-                    row
+                    row-fluid
                     list-horizontal
                     mb-2
                     p-0">
