--- a/src/main/resources/templates/sites/panel.html
+++ b/src/main/resources/templates/sites/panel.html
@@ -37,10 +37,10 @@
                 <div th:replace="~{fragments/modulelist.html :: modulelist}"></div>
             </div>
         </div>
-
     </div>
+    <div th:replace="~{fragments/onlay.html :: onlay}"></div>
 </body>
+<script src="/js/gui.js"></script>
 <script src="/js/api.js"></script>
 <script src="/js/logic.js"></script>
-<script src="/js/gui.js"></script>
 </html>
