Created overlay with contents: error, create group, delete group.

--- a/src/main/resources/templates/fragments/grouplist.html
+++ b/src/main/resources/templates/fragments/grouplist.html
@@ -14,7 +14,7 @@
     <div id="addGroup"
          class="box
                 row"
-         onclick="showGroupCreationOnlay()">
+         onclick="showCreateGroupOverlay()">
         <div class="col-6
                     offset-3
                     pt-2">
