--- a/src/main/resources/static/css/panel.css
+++ b/src/main/resources/static/css/panel.css
@@ -199,7 +199,7 @@ input[type=number] {
     margin: 5px;
 }
 
-.onlay {
+.overlay {
     position: absolute;
     z-index: 5;
     width: 100%;
@@ -207,7 +207,7 @@ input[type=number] {
     background-color: rgba(30, 30, 30, 0.86);
 }
 
-.onlay-panel {
+.overlay-panel {
     background-color: #4e4e4e;
     box-shadow: 0 0 2px 1px rgb(0, 0, 0);
     border-radius: 3px;
@@ -215,7 +215,7 @@ input[type=number] {
     margin: auto;
 }
 
-#inputGroupName {
+#overlay-input {
     border: solid black 2px;
     color: black;
     font-size: 20px;
