--- a/src/main/resources/templates/sites/panel.html
+++ b/src/main/resources/templates/sites/panel.html
@@ -25,7 +25,7 @@
                             col-7
                             m-3">
                     <h1>LOGO</h1>
-                    <h2>Groupname</h2>
+                    <h2 class="group-name">Groupname</h2>
                     <div th:replace="~{fragments/options.html :: options}"></div>
                     <div th:replace="~{fragments/colorlist.html :: colorlist}"></div>
                     <div class="container
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div th:replace="~{fragments/onlay.html :: onlay}"></div>
+    <div th:replace="~{fragments/overlay.html :: overlay}"></div>
 </body>
 <script src="/js/gui.js"></script>
 <script src="/js/api.js"></script>
