--- a/src/main/resources/templates/fragments/modulelist.html
+++ b/src/main/resources/templates/fragments/modulelist.html
@@ -7,12 +7,20 @@
 
 <div th:fragment="modulelist"
      id="modulelist"
-     class="container
-            list-vertical
+     class="list-vertical
             col-2
-            m-3">
-
-    modulelist
+            m-3
+            p-0">
+    <div id="addModule"
+         class="box
+                row"
+         onclick="showAssignModuleOverlay()">
+        <div class="col-6
+                    offset-3
+                    pt-2">
+            <img src="/img/add.svg">
+        </div>
+    </div>
 </div>
 
 </body>
