--- a/src/main/resources/templates/fragments/modepane.html
+++ b/src/main/resources/templates/fragments/modepane.html
@@ -7,8 +7,10 @@
 
 <div th:fragment="modepane"
      class="box
-            mt-2">
-    <div class="box">
+            mt-2
+            pane-mode">
+    <div class="box
+                darker">
         <h3 class="container">Modus</h3>
     </div>
     <div class="row
