--- a/src/main/resources/templates/sites/panel.html
+++ b/src/main/resources/templates/sites/panel.html
@@ -24,7 +24,8 @@
                 <div class="container
                             col-7
                             m-3">
-                    <h1>LOGO</h1>
+                    <img id="logo"
+                         src="/img/logo.png">
                     <h2 id="group-name-headline">Groupname</h2>
                     <div th:replace="~{fragments/options.html :: options}"></div>
                     <div th:replace="~{fragments/colorlist.html :: colorlist}"></div>
